# cpp-project

./: .gitignore  .ninja_deps  .ninja_log  Bullet.cpp  Bullet.h  CMakeLists.txt  Game.cpp  Game.h  GameOver.xcf  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  README.md  Sword.cpp  Sword.h  a.out  backup.txt  build.ninja  test.cpp
.cmake/api/v1/reply/: cache-v2-887813e90465651a5ab9.json  cmakeFiles-v1-8568f61c766089f61fba.json  codemodel-v2-65a12d9cbb9d15f5a61b.json  index-2023-11-11T20-22-53-0076.json  target-game-946bcedbc8e141a76bc2.json  toolchains-v1-5b83e798a60151fc108d.json
CPP-Project_Game/GameProject/GameProject/: Bullet.cpp  Bullet.h  GameProject.vcxproj  GameProject.vcxproj.filters  GameState.h  Level.cpp  Level.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  Sword.cpp  Sword.h  box.h  main.cpp
CPP-Project_Game/GameProject/GameProject/x64/Debug/: GameProject.exe.recipe  vc143.idb
CPP-Project_Game/GameProject/GameProject/x64/Debug/GameProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GameProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Tutorial/: .gitignore  Tutorial.sln
Tutorial/Tutorial/: Bullet.h  Config.h  Game.cpp  Obstacle.cpp  Player.h  Tutorial.vcxproj  Tutorial.vcxproj.filters
Tutorial/Tutorial/x64/Debug/: Tutoriald.exe.recipe  vc143.idb
Tutorial/Tutorial/x64/Debug/Tutorial.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Tutorial.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Tutorial/sgg/lib/: sgg.lib
assets/: Config.h  Enemy.cpp  GameObject.h  GameState.cpp  GameState.h  Level.cpp  Level.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  Sword.h  main.cpp  util.h
src/: .Game.h.swp  Arrow.cpp  Arrow.h  Bullet.cpp  Bullet.h  Config.h  Enemy.cpp  Enemy.h  Game.h  GameObject.cpp  GameObject.h  GameProject.sln  GameProject.vcxproj  GameProject.vcxproj.filters  GameState.cpp  GameState.h  Level.cpp  Level.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  Sword.cpp  Sword.h  main.cpp  util.h
